test/error/ast/DerefToNotPointer.mod
MODULE DerefToNotPointer;
VAR i: INTEGER;
BEGIN
  i := i^;
END DerefToNotPointer.
